--- a/cinevelvet-frontend/src/css/Sala.css
+++ b/cinevelvet-frontend/src/css/Sala.css
@@ -20,7 +20,7 @@
 }
 
 .seatplan__cinema-screen {
-    width: 75% ;
+    width: 430px;
     background: hsla(202, 12%, 44%, 1);
     box-shadow: inset 0 -10px 5px -10px #000;
     color: hsla(0, 0%, 100%, 1);
@@ -136,6 +136,39 @@
     height: 100%;
 }
 
+@media (min-width: 768px) and (max-width: 1024) {
+    .sala-grid {
+        width: auto;
+        gap: 5px;
+        grid-template-columns: repeat(5, 30px) 30px repeat(5, 30px);
+        justify-content: center;
+    }
+
+    .seatplan__cinema-screen {
+        width: 100%;
+        background: hsla(202, 12%, 44%, 1);
+        box-shadow: inset 0 -10px 5px -10px #000;
+        color: hsla(0, 0%, 100%, 1);
+        letter-spacing: 2px;
+        margin: 50px auto;
+        border-bottom-left-radius: .25rem;
+        border-bottom-right-radius: .25rem;
+    }
+
+    .leyenda-butacas {
+        display: flex;
+        justify-content: flex-start;
+        margin-top: 20px;
+        gap: 10px;
+        margin-bottom: 1.5rem;
+        align-items: center;
+        flex-wrap: wrap;
+
+    }
+
+
+}
+
 /* 📱📲 Estilo para móviles (hasta 480px) */
 @media (max-width: 480px) {
     .sala-grid {
@@ -226,12 +259,12 @@
     color: white;
 }
 
-/* 📱📲 Estilo para Tablets (481px a 768px) */
-@media (max-width: 768px) {
+/* 📱📲 Estilo para moviles pequeños (max 347px) */
+@media (max-width: 347px) {
     .sala-grid {
         width: auto;
         gap: 5px;
-        grid-template-columns: repeat(5, 20px) 30px repeat(5, 20px);
+        grid-template-columns: repeat(5, 25px) 30px repeat(5, 25px);
         justify-content: center;
     }
 
@@ -245,15 +278,46 @@
         border-bottom-left-radius: .25rem;
         border-bottom-right-radius: .25rem;
     }
-    .leyenda-butacas {
-    display: flex;
-    justify-content: flex-start;
-    margin-top: 20px;
-    gap: 10px;
-    margin-bottom: 1.5rem;
-    align-items: center;
-    flex-wrap: wrap;
 
+    .leyenda-butacas {
+        display: flex;
+        margin-top: 20px;
+        gap: 10px;
+        margin-bottom: 1.5rem;
+        align-items: center;
+        flex-wrap: wrap;
+
+    }
+}
+
+@media (min-width: 350px) and (max-width: 768px) {
+    .sala-grid {
+        width: auto;
+        gap: 5px;
+        grid-template-columns: repeat(5, 25px) 30px repeat(5, 25px);
+        justify-content: center;
+    }
+
+    .seatplan__cinema-screen {
+        width: 100%;
+        background: hsla(202, 12%, 44%, 1);
+        box-shadow: inset 0 -10px 5px -10px #000;
+        color: hsla(0, 0%, 100%, 1);
+        letter-spacing: 2px;
+        margin: 50px auto;
+        border-bottom-left-radius: .25rem;
+        border-bottom-right-radius: .25rem;
+    }
+
+    .leyenda-butacas {
+        display: flex;
+        margin-top: 20px;
+        gap: 10px;
+        margin-bottom: 1.5rem;
+        align-items: center;
+        flex-wrap: wrap;
+
+    }
 }
 
 .formulario-reserva {
