--- a/cinevelvet-frontend/src/css/Sala.css
+++ b/cinevelvet-frontend/src/css/Sala.css
@@ -7,8 +7,6 @@
     max-width: fit-content;
 }
 
-
-
 /* Estilos para cada butaca */
 .butaca {
     display: flex;
@@ -72,7 +70,6 @@
     pointer-events: none;
 }
 
-
 .leyenda-icono.seleccionada {
     filter: brightness(0.7) sepia(1) hue-rotate(100deg) saturate(2);
 }
@@ -133,39 +130,6 @@
 .pasillo {
     width: 100%;
     height: 100%;
-}
-
-@media (min-width: 768px) and (max-width: 1024) {
-    .sala-grid {
-        width: auto;
-        gap: 5px;
-        grid-template-columns: repeat(5, 30px) 30px repeat(5, 30px);
-        justify-content: center;
-    }
-
-    .seatplan__cinema-screen {
-        width: 100%;
-        background: hsla(202, 12%, 44%, 1);
-        box-shadow: inset 0 -10px 5px -10px #000;
-        color: hsla(0, 0%, 100%, 1);
-        letter-spacing: 2px;
-        margin: 50px auto;
-        border-bottom-left-radius: .25rem;
-        border-bottom-right-radius: .25rem;
-    }
-
-    .leyenda-butacas {
-        display: flex;
-        justify-content: flex-start;
-        margin-top: 20px;
-        gap: 10px;
-        margin-bottom: 1.5rem;
-        align-items: center;
-        flex-wrap: wrap;
-
-    }
-
-
 }
 
 /* 📱📲 Estilo para móviles (hasta 480px) */
@@ -287,6 +251,7 @@
     }
 }
 
+/* 📱📲 Estilo para moviles medianos (min 350px and max 768px) */
 @media (min-width: 350px) and (max-width: 768px) {
     .sala-grid {
         width: auto;
@@ -308,6 +273,38 @@
 
     .leyenda-butacas {
         display: flex;
+        margin-top: 20px;
+        gap: 10px;
+        margin-bottom: 1.5rem;
+        align-items: center;
+        flex-wrap: wrap;
+
+    }
+}
+
+/* 📱📲 Estilo para moviles grandes y tablet (min 768px and max 1024px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+    .sala-grid {
+        width: auto;
+        gap: 5px;
+        grid-template-columns: repeat(5, 30px) 30px repeat(5, 30px);
+        justify-content: center;
+    }
+
+    .seatplan__cinema-screen {
+        width: 100%;
+        background: hsla(202, 12%, 44%, 1);
+        box-shadow: inset 0 -10px 5px -10px #000;
+        color: hsla(0, 0%, 100%, 1);
+        letter-spacing: 2px;
+        margin: 50px auto;
+        border-bottom-left-radius: .25rem;
+        border-bottom-right-radius: .25rem;
+    }
+
+    .leyenda-butacas {
+        display: flex;
+        justify-content: flex-start;
         margin-top: 20px;
         gap: 10px;
         margin-bottom: 1.5rem;
