--- a/cinevelvet-frontend/src/css/Home.css
+++ b/cinevelvet-frontend/src/css/Home.css
@@ -86,8 +86,8 @@ body {
 
 .admin-icon {
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: 10px;
+  right: 10px;
   background: transparent;
   border: none;
   color: white;
@@ -417,6 +417,23 @@ body {
   z-index: 1001;
 }
 
+.popup-portada-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  transform: translate(-50%, -50%);
+  background: #800000;
+  color: white;
+  padding: 10px;
+  max-width: 800px;
+  width: 80%;
+  border-radius: 10px;
+  outline: none;
+  z-index: 1001;
+}
+
 .popup-mensaje-modal button {
   padding: 10px 16px;
   color: white;
@@ -429,8 +446,8 @@ body {
 
 .cerrar-icono {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 0px;
+  right: 0px;
   background: transparent;
   border: none;
   color: #fff;
