--- a/cinevelvet-frontend/src/css/HeaderConTabs.css
+++ b/cinevelvet-frontend/src/css/HeaderConTabs.css
@@ -25,3 +25,41 @@
     border-bottom: 3px solid #970000c2; /* o el color que prefieras */
     color: #000;
 }
+.info-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 2rem;
+  justify-content: space-between;
+}
+
+.info-cards {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex: 1;
+  min-width: 250px;
+  max-width: 300px;
+}
+
+.info-card {
+  background-color: #9a9595;
+  color: white;
+  padding: 1rem;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 8px;
+  font-size: 1rem;
+}
+
+.info-descripcion {
+  flex: 2;
+  min-width: 250px;
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  color: #333;
+}
