--- a/cinevelvet-frontend/src/css/Home.css
+++ b/cinevelvet-frontend/src/css/Home.css
@@ -512,7 +512,7 @@ body {
 
 .contacto-footer {
   background-color: #9a9595;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   text-align: center;
   padding: 10px;
   margin-top: 10px;
@@ -527,4 +527,17 @@ body {
 
 .contacto-footer a:hover {
   text-decoration: underline;
+}
+
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeIn 0.6s ease forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
