--- a/cinevelvet-frontend/src/css/HeaderConTabs.css
+++ b/cinevelvet-frontend/src/css/HeaderConTabs.css
@@ -1,30 +1,32 @@
 .tabs-full-container {
-    display: flex;
-    width: 100%;
-    background-color: #f5f5f5;
-    border-bottom: 1px solid #ddd;
-    text-align: center;
-    margin-bottom: 24px;
+  display: flex;
+  width: 100%;
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #ddd;
+  text-align: center;
+  margin-bottom: 24px;
 }
 
 .tab-full {
-    flex: 1;
-    padding: 16px 0;
-    cursor: pointer;
-    font-weight: 500;
-    color: #555;
-    border-bottom: 3px solid transparent;
-    transition: border-color 0.3s ease, color 0.3s ease;
+  flex: 1;
+  padding: 16px 0;
+  cursor: pointer;
+  font-weight: 500;
+  color: #555;
+  border-bottom: 3px solid transparent;
+  transition: border-color 0.3s ease, color 0.3s ease;
 }
 
 .tab-full:hover {
-    color: #000;
+  color: #000;
 }
 
 .tab-full.activo {
-    border-bottom: 3px solid #970000c2; /* o el color que prefieras */
-    color: #000;
+  border-bottom: 3px solid #970000c2;
+  /* o el color que prefieras */
+  color: #000;
 }
+
 .info-container {
   display: flex;
   flex-wrap: wrap;
